<resources>
    <string name="app_name">AssignMate</string>
    <string name="title_home">Home</string>
    <string name="title_groups">Groups</string>
    <string name="title_create">Create</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_profile">Profile</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="loginbg">loginBG</string>
    <string name="userLogin">Login</string>
</resources>