<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_group"
        android:title="@string/title_groups" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />

</menu>